# blog

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.vue  main.ts
src-image-api/: Cargo.toml
src-image-api/src/: images.rs  main.rs  query.rs
src/api/: auth.ts  categories.ts  comments.ts  connect.ts  images.ts  oauth2.ts  posts.ts  profiles.ts  users.ts
src/api/oauth2/: discord.ts  google.ts
src/components/: BBtn.vue  BCard.vue  BComment.vue  BInput.vue  BInputLabel.vue  BMarkdown.vue  BMultiSelect.vue  BNav.vue  BNewSelect.vue  BSelect.vue  BSimpleCard.vue
src/db/: auth.surql  categories.surql  comments.surql  oauth2.surql  posts.surql  profiles.surql  roles.surql  users.surql
src/middlewares/: admin.ts  auth.ts
src/router/: index.ts
src/stores/: auth.ts  profile.ts
src/utils/: localStorage.ts
src/views/: CallbackView.vue  HomeView.vue  LoginView.vue  PageForbidden.vue  PageNotFound.vue  RegisterView.vue
src/views/admin/: AdminView.vue  CategoryCreate.vue  CategoryDetails.vue  CategoryEdit.vue
src/views/posts/: CreatePost.vue  EditPost.vue  PostView.vue  PostsView.vue
src/views/profiles/: EditProfile.vue  MyProfile.vue  ProfileView.vue
