[package]
name = "src-image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version = "0.66", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6.1", features = ["v4"] }
